gcc-14.2.0/gcc/testsuite/gdc.test/compilable/named_arguments.d
version https://git-lfs.github.com/spec/v1
oid sha256:9b88e469ed0f4e446f7821a6db0ec952eb9b9053482e23e13206efb0ffa575b7
size 1921
